--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,29 +1,43 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+analyzer:
+  exclude:
+    - build/**
+    - lib/**/*.g.dart
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at
-  # https://dart-lang.github.io/linter/lints/index.html.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    lines_longer_than_80_chars: false
+    prefer_relative_imports: false
+    prefer_collection_literals: false
+    unnecessary_final: false
+    avoid_annotating_with_dynamic: false
+    sort_constructors_first: false
+    avoid_types_on_closure_parameters: false
+    avoid_as: false
+    prefer_final_locals: false
+    omit_local_variable_types: false
+    prefer_double_quotes: false
+    prefer_single_quotes: true
+    use_key_in_widget_constructors: true
+    prefer_spread_collections: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_constructors: true
+    unnecessary_await_in_return: true
+    avoid_void_async: true
+    unawaited_futures: true
+    overridden_fields: true
+    annotate_overrides: true
+    parameter_assignments: true
+    always_require_non_null_named_parameters: true
+    prefer_final_in_for_each: true
+    prefer_final_fields: true
+    void_checks: true
+    comment_references: true
+    unrelated_type_equality_checks: true
+    cascade_invocations: true
+    diagnostic_describe_all_properties: false
+    sort_child_properties_last: true
+    join_return_with_assignment: true
+    prefer_asserts_with_message: true
+    prefer_null_aware_operators: true
+    avoid_single_cascade_in_expression_statements: true
+    unnecessary_parenthesis: true
