--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,14 @@ dependencies:
   flutter_svg: ^1.0.3
   hive_flutter: ^1.1.0
   hive: ^2.2.1
+  hive_generator: ^1.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.11
 
 flutter:
 
