--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.1
   hive_generator: ^1.1.3
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
